# mcp-mealie

./: .gitignore  pyproject.toml
data/seeds/: flavor_pairings.json  seasonal_france.json  substitutions.json  techniques.json
scripts/: seed_knowledge_base.py
skill/: SKILL.md
src/: mealie_mcp_server.py  scrapers.py
